@@ -14,12 +14,14 @@ import java.io.OutputStream;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.nio.charset.Charset;
+import java.util.Optional;
 import java.util.Timer;
 import java.util.TimerTask;
 import java.util.TooManyListenersException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Stream;
 
+import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.simplebinary.internal.core.SimpleBinaryDeviceState.DeviceStates;
 import org.openhab.binding.simplebinary.internal.core.SimpleBinaryPortState.PortStates;
 import org.openhab.core.io.transport.serial.PortInUseException;
@@ -98,6 +100,7 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
      * @param discardCommand
      * @param syncCommand
      */
+    @NonNullByDefault
     public SimpleBinaryUART(SerialPortManager serialPortManager, String port, int baud,
             SimpleBinaryPollControl simpleBinaryPollControl, boolean forceRTS, boolean invertedRTS, int pollRate,
             Charset charset, int timeout, int degradeMaxFailuresCount, int degradeTime, boolean discardCommand,
@@ -196,7 +199,8 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
             this.close();
             portState.setState(PortStates.NOT_AVAILABLE);
 
-            var msg = String.format("%s is in use. Owner is {}", this.toString(), portId.getCurrentOwner());
+            var msg = String.format("%s is in use. Owner is %s", this.toString(),
+                    Optional.ofNullable(portId.getCurrentOwner()).orElse("unknown"));
             logger.error(msg);
             setConnected(false, msg);
 
@@ -493,8 +497,11 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
                             cancelWaitingForAnswer();
                             // notify device
                             if (devices.containsKey(getLastSentData().getDeviceId())) {
-                                synchronized (devices.get(getLastSentData().getDeviceId())) {
-                                    devices.get(getLastSentData().getDeviceId()).notify();
+                                SimpleBinaryDevice device = devices.get(getLastSentData().getDeviceId());
+                                if (device != null) {
+                                    synchronized (device) {
+                                        device.notify();
+                                    }
                                 }
                             }
                         } else if (r == ProcessDataResult.DATA_NOT_COMPLETED
@@ -595,7 +602,7 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
                     timer.schedule(timeoutTask, timeout);
                 } catch (IllegalStateException ex) {
                     logger.warn("{} - Cannot create timeout task. Task throw IllegalStateException. Thread={}",
-                            this.toString(), Thread.currentThread().getId());
+                            this.toString(), Thread.currentThread().threadId());
                     waitingForAnswer.set(false);
                     return false;
                 }
@@ -613,7 +620,7 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
     protected void cancelWaitingForAnswer() {
         if (!waitingForAnswer.compareAndSet(true, false)) {
             logger.warn("{} - Device{} - cancelWaitingForAnswer(). waitingForAnswer already cancelled. Thread={}",
-                    this.toString(), this.getLastSentData().getDeviceId(), Thread.currentThread().getId());
+                    this.toString(), this.getLastSentData().getDeviceId(), Thread.currentThread().threadId());
             return;
         }
 
@@ -622,11 +629,11 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
                 if (timeoutTask.cancel()) {
                     if (logger.isDebugEnabled()) {
                         logger.debug("{} - Device{} - timeout task cancelled. Thread={}", this.toString(),
-                                this.getLastSentData().getDeviceId(), Thread.currentThread().getId());
+                                this.getLastSentData().getDeviceId(), Thread.currentThread().threadId());
                     }
                 } else {
                     logger.warn("{} - Device{} - timeout task already cancelled. Thread={}", this.toString(),
-                            this.getLastSentData().getDeviceId(), Thread.currentThread().getId());
+                            this.getLastSentData().getDeviceId(), Thread.currentThread().threadId());
                 }
                 timeoutTask = null;
             }
@@ -642,23 +649,23 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
 
         while (readingData.get() > 0 && timeout-- > 0) {
             logger.warn("{} - Device{} - Receiving data timeouted but reading still active ({}). Thread={}",
-                    this.toString(), address, readingData.get(), Thread.currentThread().getId());
+                    this.toString(), address, readingData.get(), Thread.currentThread().threadId());
             try {
                 Thread.sleep(100);
             } catch (InterruptedException e) {
                 logger.error("{} - dataTimeouted() Thread.sleep() error. Thread={}", this.toString(),
-                        Thread.currentThread().getId());
+                        Thread.currentThread().threadId());
             }
         }
 
         if (!waitingForAnswer.compareAndSet(true, false)) {
             logger.warn("{} - Device{} - dataTimeouted cancelled. waitingForAnswer not active. Thread={}",
-                    this.toString(), address, Thread.currentThread().getId());
+                    this.toString(), address, Thread.currentThread().threadId());
             return;
         }
 
         logger.warn("{} - Device{} - Receiving data timeouted. Thread={}", this.toString(), address,
-                Thread.currentThread().getId());
+                Thread.currentThread().threadId());
 
         setDeviceState(address, DeviceStates.NOT_RESPONDING);
 
@@ -674,8 +681,11 @@ public class SimpleBinaryUART extends SimpleBinaryGenericDevice implements Seria
         inBuffer.clear();
 
         if (devices.containsKey(getLastSentData().getDeviceId())) {
-            synchronized (devices.get(getLastSentData().getDeviceId())) {
-                devices.get(getLastSentData().getDeviceId()).notify();
+            SimpleBinaryDevice device = devices.get(getLastSentData().getDeviceId());
+            if (device != null) {
+                synchronized (device) {
+                    device.notify();
+                }
             }
         }
     }
